codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_loading.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Shortcut server.
  Loading server experiments…





  space toggle · enter save · esc save/close
